crates/tui/tests/snapshots/views__view_00_chat_empty.snap
---
source: crates/tui/tests/views.rs
expression: draw(&chat_app())
---
" SYMPHONY arete-mobile · Chat                                                                   "
"┌ Chat ────────────────────────────────────────────────────────────────────────────────────────┐"
"│CHAT  todavía no empezó                                                                       │"
"│Modelo:  claude/opus  (primer mensaje)   Rama: symphony/chat                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Conversación ────────────────────────────────────────────────────────────────────────────────┐"
"│Escribe tu primer mensaje para empezar.                                                       │"
"│Symphony trabaja en la rama symphony/chat de este proyecto y guarda un commit por turno.      │"
"│Con Tab eliges el modelo de cada mensaje: cambiar a mitad conserva la conversación.           │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Mensaje · para claude/opus (Tab cambia) ─────────────────────────────────────────────────────┐"
"│▏                                                                                             │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" Enter enviar · Tab modelo · ↑↓/rueda · ^Y copiar · ^E exportar · F2 ratón · Esc tareas         "
