crates/tui/tests/snapshots/views__view_01_launch_checking.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY                                                                                       "
"┌ Symphony ────────────────────────────────────────────────────────────────────────────────────┐"
"│Proyecto:  /work/arete-mobile                                                                 │"
"│Revisando el estado del proyecto…  …                                                          │"
"│Revisando proveedores…             …                                                          │"
"│Restaurando sesión…                …                                                          │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" q salir                                                                                        "
