crates/tui/tests/snapshots/views__view_01_launch_not_a_repo.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY                                                                                       "
"┌ Symphony ────────────────────────────────────────────────────────────────────────────────────┐"
"│Esta carpeta no parece un repositorio git:                                                    │"
"│  /tmp/fotos                                                                                  │"
"│                                                                                              │"
"│Abre symphony dentro de la carpeta de tu proyecto                                             │"
"│(o corre `git init` si es un proyecto nuevo).                                                 │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" q salir                                                                                        "
