crates/tui/tests/snapshots/views__view_01_launch_project_without_symphony.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile                                                                          "
"┌ Symphony ────────────────────────────────────────────────────────────────────────────────────┐"
"│Proyecto:  arete-mobile                                                                       │"
"│Revisando el estado del proyecto…  listo                                                      │"
"│Revisando proveedores…             listo                                                      │"
"│                                                                                              │"
"│Symphony todavía no está configurado en este proyecto.                                        │"
"│                                                                                              │"
"│[i] Inicializar    [o] Abrir sin configurar    [q] Salir                                      │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" i inicializar · o abrir sin configurar · q salir                                               "
