crates/tui/tests/snapshots/views__view_02_first_run.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Configuración inicial                                                  "
"┌ Configuración inicial ───────────────────────────────────────────────────────────────────────┐"
"│Ruta: /work/arete-mobile                                                                      │"
"│                                                                                              │"
"│  Proyecto      arete-mobile                                                                  │"
"│▸ Rendimiento   (•) Eco  ( ) Balanced  ( ) Performance  ( ) Custom                            │"
"│  Failover      (•) Cualquier proveedor  ( ) Solo el mismo  ( ) Desactivado                   │"
"│                                                                                              │"
"│PROVEEDORES DETECTADOS                                                                        │"
"│  Claude      READY                                                                           │"
"│  Codex       LOGIN_REQUIRED                                                                  │"
"│  Copilot     READY                                                                           │"
"│                                                                                              │"
"│                [ Entrar a Symphony ]                                                         │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ campo · ←→ opción · Enter siguiente · Esc volver                                            "
