crates/tui/tests/snapshots/views__view_03_provider_setup.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Proveedores                                                            "
"┌ Configurar proveedores ──────────────────────────────────────────────────────────────────────┐"
"│  PROVEEDOR   ESTADO          SALUD         CUOTA                 VERSIÓN   MODELOS           │"
"│  Claude      READY           QUOTA_LOW     15 % restante         2.1.0           4           │"
"│▸ Codex       LOGIN_REQUIRED  UNKNOWN       restante desconocido  0.40.0          0           │"
"│  Copilot     READY           RATE_LIMITED  estimada (sin %)      1.0.60          1           │"
"│                                                                                              │"
"│Codex está instalado pero sin sesión. Inicia sesión con su CLI oficial y pulsa r; o d para    │"
"│saltarlo.                                                                                     │"
"│Ruta: /usr/bin/codex                                                                          │"
"│                                                                                              │"
"│No hace falta configurar todos: puedes empezar con uno y agregar otros después.               │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · r reintentar · d activar/desactivar · Enter continuar                              "
