crates/tui/tests/snapshots/views__view_04_home_empty.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile                                                                          "
"┌ Inicio ──────────────────────────────────────────────────────────────────────────────────────┐"
"│⚠ 1 proveedor(es) necesitan atención: pulsa p.                                                │"
"│                                                                                              │"
"│AGENTES                                                                                       │"
"│                                                                                              │"
"│  Todavía no hay agentes. Pulsa n para crear el primero.                                      │"
"│  También: p proveedores · r recovery · : comandos                                            │"
"│                                                                                              │"
"│PROVEEDORES                                                                                   │"
"│  Claude READY   Codex LOGIN_REQUIRED   Copilot READY                                         │"
"│                                                                                              │"
"│SISTEMA                                                                                       │"
"│  CPU, RAM y operaciones pesadas: se muestran cuando llegue el scheduler (v0.5).              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · Enter abrir · n nuevo · p proveedores · r recovery · : comando · Esc chat · q salir"
