crates/tui/tests/snapshots/views__view_04_home_with_agents_and_a_problem.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile                                                                          "
"┌ Inicio ──────────────────────────────────────────────────────────────────────────────────────┐"
"│⚠ 2 problema(s) por recuperar: pulsa r para abrir el Recovery Center.                         │"
"│⚠ 1 proveedor(es) necesitan atención: pulsa p.                                                │"
"│                                                                                              │"
"│AGENTES                                                                                       │"
"│  #1  RUNNING            claude/sonnet      Supabase authentication                           │"
"│▸ #2  WAITING_PROVIDER   —                  Responsive modals                                 │"
"│      Codex agotó su cuota y el failover está desactivado.                                    │"
"│                                                                                              │"
"│COMPLETADOS                                                                                   │"
"│  #3  COMPLETED          —                  Integration tests                                 │"
"│                                                                                              │"
"│PROVEEDORES                                                                                   │"
"│  Claude READY   Codex LOGIN_REQUIRED   Copilot READY                                         │"
"│                                                                                              │"
"│SISTEMA                                                                                       │"
"│  CPU, RAM y operaciones pesadas: se muestran cuando llegue el scheduler (v0.5).              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ elegir · Enter abrir · n nuevo · p proveedores · r recovery · : comando · Esc chat · q salir"
