crates/tui/tests/snapshots/views__view_05_new_agent.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Nuevo agente                                                           "
"┌ Nuevo agente ────────────────────────────────────────────────────────────────────────────────┐"
"│  Tarea         Fix refresh token rotation and add regression tests                           │"
"│                                                                                              │"
"│▸ Ejecución     (•) Modelo exacto: Enter para elegir   ( ) Profile: Enter para elegir   ( )   │"
"│Decidir después                                                                               │"
"│                  Un modelo exacto no se sustituye en silencio; un profile (@code, @fast…)    │"
"│deja elegir a Symphony.                                                                       │"
"│  Failover      (•) Cualquier proveedor  ( ) Solo el mismo  ( ) Desactivado                   │"
"│  Prioridad     (•) Normal  ( ) Alta  ( ) Baja                                                │"
"│                                                                                              │"
"│                [ Crear agente ]                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↑↓ campo · ←→ opción · Enter siguiente/crear · Esc cancelar                                    "
