crates/tui/tests/snapshots/views__view_06_agent_overview.snap
---
source: crates/tui/tests/views.rs
expression: "draw(&agent_app(Tab::Overview))"
---
" SYMPHONY arete-mobile · Agente                                                                 "
"┌ Agente ──────────────────────────────────────────────────────────────────────────────────────┐"
"│AGENTE #1  RUNNING  trabajando                                                                │"
"│Tarea:      Fix refresh token expiration                                                      │"
"│Executor:   codex/gpt-5 (run #2)                                                              │"
"│Failover:   ANY   Workspace: symphony/8e4f/agent-001   Checkpoint: hace 14 s                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 Resumen │ 2 Conversación │ 3 Actividad │ 4 Cambios │ 5 Historial                             "
"┌ Resumen ─────────────────────────────────────────────────────────────────────────────────────┐"
"│AHORA                                                                                         │"
"│  Running targeted tests...                                                                   │"
"│SIGUIENTE                                                                                     │"
"│  Investigate refresh middleware response                                                     │"
"│ÚLTIMO PLAN                                                                                   │"
"│  1. Reproduce                                                                                │"
"│  2. Fix rotation                                                                             │"
"│  - [ ] Investigate refresh middleware response                                               │"
"│                                                                                              │"
"│Runs: 2 · Contexto: BALANCED · Worktree: /home/leo/.symphony/worktrees/p/agent-001            │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ←→ pestaña · m mensaje · p pausa · s modelo · ? por qué · o CLI · e exportar · d diff · x deten"
