crates/tui/tests/snapshots/views__view_07_agent_conversation_with_executor_change.snap
---
source: crates/tui/tests/views.rs
expression: draw(&app)
---
" SYMPHONY arete-mobile · Agente                                                                 "
"┌ Agente ──────────────────────────────────────────────────────────────────────────────────────┐"
"│AGENTE #1  RUNNING  trabajando                                                                │"
"│Tarea:      Fix refresh token expiration                                                      │"
"│Executor:   codex/gpt-5 (run #2)                                                              │"
"│Failover:   ANY   Workspace: symphony/8e4f/agent-001   Checkpoint: hace 14 s                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 Resumen │ 2 Conversación │ 3 Actividad │ 4 Cambios │ 5 Historial                             "
"┌ Conversación ────────────────────────────────────────────────────────────────────────────────┐"
"│     tú │ Fix refresh token expiration                                                        │"
"│                                                                                              │"
"│ agente │ Voy a reproducir el bug primero.                                                    │"
"│        │ Next: correr los tests                                                              │"
"│                                                                                              │"
"│── Executor changed: Claude / sonnet → Codex / gpt-5                                          │"
"│Reason: quota exhausted                                                                       │"
"│Agent #1, task and workspace unchanged                                                        │"
"│Handoff restored from checkpoint #14                                                          │"
"│                                                                                              │"
"│ agente │ Sigo con los tests del middleware.                                                  │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Mensaje para el executor ────────────────────────────────────────────────────────────────────┐"
"│revisa también el logout▏                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" Enter enviar · Esc cancelar                                                                    "
