crates/tui/tests/snapshots/views__view_08_agent_activity.snap
---
source: crates/tui/tests/views.rs
expression: "draw(&agent_app(Tab::Activity))"
---
" SYMPHONY arete-mobile · Agente                                                                 "
"┌ Agente ──────────────────────────────────────────────────────────────────────────────────────┐"
"│AGENTE #1  RUNNING  trabajando                                                                │"
"│Tarea:      Fix refresh token expiration                                                      │"
"│Executor:   codex/gpt-5 (run #2)                                                              │"
"│Failover:   ANY   Workspace: symphony/8e4f/agent-001   Checkpoint: hace 14 s                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 Resumen │ 2 Conversación │ 3 Actividad │ 4 Cambios │ 5 Historial                             "
"┌ Actividad ───────────────────────────────────────────────────────────────────────────────────┐"
"│    5 s  ✗ Bash     npm test -- auth (exit 1)                                                 │"
"│   14 s  checkpoint #14  Running targeted tests...                                            │"
"│   30 s  ✓ Edit                                                                               │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" ←→ pestaña · m mensaje · p pausa · s modelo · ? por qué · o CLI · e exportar · d diff · x deten"
